added basic html text and reset css

--- a/index.html
+++ b/index.html
@@ -9,35 +9,35 @@
 </head>
 <body>
      <header>
-        <h1></h1>
-        <buton></buton>
+        <h1>Welcome</h1>
+        <button>Light or dark</button>
      </header>
 
      <main>
         <article>
             <section>
-                <h2></h2>
+                <h2>My first blog</h2>
             </section>
         </article>
 
         <article>
-            <h3></h3>
+            <h3>What's on your mind?</h3>
             <section>
-                <h4></h4>
+                <h4>Username</h4>
                 <div></div>
             </section>
 
             <section>
-                <h4></h4>
+                <h4>Title</h4>
                 <div></div>
             </section>
 
             <section>
-                <h4></h4>
+                <h4>Content</h4>
                 <div></div>
             </section>
 
-            <button></button>
+            <button>Submit</button>
         </article>
      </main>
      <script src="./assets/js/logic.js"></script>
