worked on css styling for blog landing page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My First Blog</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="stylesheet" href="./assets/css/blog.css">
 </head>
@@ -14,13 +14,13 @@
      </header>
 
      <main>
-        <article>
+        <article id="article1">
             <section>
                 <h2>My first blog</h2>
             </section>
         </article>
 
-        <article>
+        <article id="article2">
             <h3>What's on your mind?</h3>
             <section>
                 <h4>Username</h4>
