--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
             <h3>What's on your mind?</h3>
             <section>
                 <h4>Username</h4>
-                <div></div>
+                <input type="text">
             </section>
 
             <section>
                 <h4>Title</h4>
-                <div></div>
+                <input type="text">
             </section>
 
             <section>
                 <h4>Content</h4>
-                <div></div>
+                <input type="text">
             </section>
 
             <button>Submit</button>
