--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Blog</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <link rel="stylesheet" href="./assets/css/blog.css">
+    <link rel="stylesheet" href="./assets/css/form.css">
 </head>
 <body>
      <header>
@@ -41,6 +41,6 @@
         </article>
      </main>
      <script src="./assets/js/logic.js"></script>
-     <script src="./assets/js/blog.js"></script>
+     <script src="./assets/js/form.js"></script>
 </body>
 </html>
