--- a/blog.html
+++ b/blog.html
@@ -8,9 +8,35 @@
     <link rel="stylesheet" href="./assets/css/blog.css">
 </head>
 <body>
-     <header></header>
+     <header>
+        <h1>Welcome</h1>
+        <button>back</button>
+        <button>Light or dark</button>
+     </header>
 
-     <main></main>
+     <main>
+        <article>
+            <div class="article-div">
+                <h2 class="article-div-h2">title</h2>
+                <p class="article-div-p">content</p>
+                <p class="article-div-footer">Username</p>
+            </div>
+            <div class="article-div">
+                <h2 class="article-div-h2">title</h2>
+                <p class="article-div-p">content</p>
+                <p class="article-div-footer">Username</p>
+            </div>
+        </article>
+     </main>
+
+     <footer>
+        <h3>Made by Matthew Ellis</h3>
+        <ul>
+            <li>Email: matthewcellis98@gmail.com</li>
+            <li>Github: mcellis1</li>
+            <li>Discord: napling</li>
+        </ul>
+     </footer>
      <script src="./assets/js/logic.js"></script>
      <script src="./assets/js/blog.js"></script>
 </body>
