--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
             <h3>What's on your mind?</h3>
             <section>
                 <h4>Username</h4>
-                <input type="text">
+                <input type="text" id="username-field">
             </section>
 
             <section>
                 <h4>Title</h4>
-                <input type="text">
+                <input type="text" id="title-field">
             </section>
 
             <section>
                 <h4>Content</h4>
-                <input type="text">
+                <input type="text" id="content-field">
             </section>
 
-            <button>Submit</button>
+            <button id="submit-button">Submit</button>
         </article>
      </main>
      <script src="./assets/js/logic.js"></script>
