--- a/blog.html
+++ b/blog.html
@@ -10,23 +10,12 @@
 <body>
      <header>
         <h1>Welcome</h1>
-        <button>back</button>
         <button>Light or dark</button>
+        <button>back</button>
      </header>
 
      <main>
-        <article>
-            <div class="article-div">
-                <h2 class="article-div-h2">title</h2>
-                <p class="article-div-p">content</p>
-                <p class="article-div-footer">Username</p>
-            </div>
-            <div class="article-div">
-                <h2 class="article-div-h2">title</h2>
-                <p class="article-div-p">content</p>
-                <p class="article-div-footer">Username</p>
-            </div>
-        </article>
+        <article id="main-article"></article>
      </main>
 
      <footer>
