removed commented out sections

--- a/blog.html
+++ b/blog.html
@@ -10,8 +10,8 @@
 <body>
      <header>
         <h1>Welcome</h1>
-        <button>Light or dark</button>
-        <button>back</button>
+        <button id="light-dark-btn">🌙</button>
+        <button id="back-btn">⬅️back</button>
      </header>
 
      <main>
