--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
      <header>
         <h1>Welcome</h1>
-        <button>Light or dark</button>
+        <button id="light-dark-btn">🌙</button>
      </header>
 
      <main>
