final commit for code

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,14 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="stylesheet" href="./assets/css/form.css">
 </head>
+
 <body>
-     <header>
+    <header>
         <h1>Welcome</h1>
         <button id="light-dark-btn">🌙</button>
-     </header>
+    </header>
 
-     <main>
+    <main>
         <article id="article1">
             <section>
                 <h2>My first blog</h2>
@@ -38,9 +40,11 @@
             </section>
 
             <button id="submit-button">Submit</button>
+            <div id="error-alert"></div>
         </article>
-     </main>
-     <script src="./assets/js/logic.js"></script>
-     <script src="./assets/js/form.js"></script>
+    </main>
+    <script src="./assets/js/logic.js"></script>
+    <script src="./assets/js/form.js"></script>
 </body>
+
 </html>
