added portfolio link

--- a/blog.html
+++ b/blog.html
@@ -26,6 +26,7 @@
          <li>Email: matthewcellis98@gmail.com</li>
          <li>Github: mcellis1</li>
          <li>Discord: napling</li>
+         <li><a href="https://mcellis1.github.io/mcellis-resume-website/">Portfolio</a></li>
       </ul>
    </footer>
    <script src="./assets/js/logic.js"></script>
